<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General Strings -->
    <string name="app_name">Livio SDL Tester</string>
    <string name="no_selection">No selection</string>
    <string name="not_implemented">This feature is not yet implemented.</string>
    <string name="not_an_sdl_command">The input argument is not an SDL command.</string>
    <string name="add_an_item">Add an Item</string>

    <!-- Menu Strings -->
    <string name="menu_connect">Connect to SDL</string>
    <string name="menu_disconnect">Disconnect from SDL</string>
    <string name="menu_reset">Reset SDL Connection</string>
    <string name="menu_clear_list">Clear ListView</string>
    <string name="menu_help">Help</string>
    
    <string name="menu_help_home">Help Home</string>
    <string name="menu_help_close">Close Help</string>

    <!-- Dialog Strings -->
    <string name="sdl_command_dialog_title">Select an SDL Command:</string>

    <!-- SDL Connection -->
    <string name="connection_status_format">Connection Status:</string>
    <string name="ip_address">IP Address</string>
    <string name="ip_port">IP Port</string>

    <!-- Offline Mode -->
    <string name="offline_mode_text">Would you like to enter offline mode?</string>

    <!-- Function Banks -->
    <string name="function_bank_root_name">Root-level Menu</string>

    <!-- Button Subscriptions -->
    <string name="button_subscriptions_already_subscribed">Already subscribed to all buttons!</string>
    <string name="button_subscriptions_none_subscribed">App hasn\'t subscribed to buttons yet!</string>

    <!-- SoftButtons -->
    <string name="include_softbuttons">Include SoftButtons</string>
    
    <!-- Slider -->
    <string name="dynamicFooter">Dynamic Footer</string>
    
    <!-- Perform Interaction -->
    <string name="perform_interaction_title">Interaction Title</string>
    <string name="perform_interaction_voice_prompt">Interaction Voice Prompt</string>
    <string name="perform_interaction_select_choice_set">Select Choice Sets</string>
    <string name="perform_interaction_mode">Interaction Mode</string>
    <string name="perform_interaction_timeout">Interaction Timeout (in seconds)</string>
    <string name="perform_interaction_timeout_enabled">Interaction Timeout Enabled</string>
    <string name="interaction_list_none_added">No choice interaction sets have been added yet!</string>

    <!-- Put File -->
    <string name="put_file_persistent_file">Persistent File</string>
    <string name="sdl_image_name">SDL Image Name</string>
    <string name="add_image">Add Image</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- TTS Chunks -->
    <string name="tts_text_hint">Enter text here</string>
    
    <!-- Set Global Properties -->
    <string name="edit_timeout_prompt">Edit Timeout Prompt</string>
    <string name="edit_help_prompt">Edit Help Prompt</string>
    <string name="edit_menu_button">Edit Menu Button</string>
    <string name="edit_vr_help">Edit VR Help</string>
    <string name="edit_keyboard_properties">Edit Keyboard Properties</string>
    <string name="limited_char_list_hint">Limited char list (CSV)</string>
    <string name="autocomplete_text">Autocomplete text</string>
    <string name="keyboard_props_keypress_mode_menu">Keypress Mode</string>
    <string name="keyboard_props_keyboard_layout_menu">Keyboard Layout</string>
    <string name="keyboard_props_language_menu">Language</string>
    <string name="menu_name_hint">Name</string>
    
    <string name="position_hint">Position</string>
    <string name="progress_indicator_enabled">Progress indicator enabled</string>

</resources>
